overflow auto for search suggestions, StreamNoResults component no longer contains search result as it can be seein in the input field anyways, removed layout shifts when the scrollbar is toggled, when the streams are refreshed, filteredStreamData is only updated if it is currently undefined which leads to the following: filtered results are not overwritten with all results and empty results are also not overwritten by all results, nevertheless, they are still updated

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,10 @@ input[type='search']::-webkit-search-cancel-button:hover {
     border-radius: 6px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: rgb(161 161 170);
+}
+
+html {
+    scrollbar-gutter: stable;
 }
